# journal_rag

./: .gitignore  README.md  main.py  org_journal_converter.py  pyproject.toml  shell.nix
dev/: layout.kdl
