[tool.poetry]
name = "journal-rag"
version = "0.1.0"
description = "A local RAG system for querying personal diary files using Ollama"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "diary_rag", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
sentence-transformers = "^2.2.2"
requests = "^2.31.0"
numpy = "^1.26.0"
pathlib = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.3.0"

[tool.poetry.scripts]
diary-rag = "diary_rag.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
